sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:16: error: ')' expected but '}' found.
  }
  ^